[package]
name = "toip-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
textwrap = "0.16.1"
udp_toip = { git = "https://github.com/danwritecode/rust_udp_chat_server" }
